# JPG-to-ASCII

./: CMakeLists.txt  README.md
resources/: SpaceX-2016-5-15T19-30-7.txt  SpaceXResize-2016-5-15T19-38-33.txt
src/: Converter.cpp  Converter.hpp  main.cpp
